--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 recursive-include pyoracc *.py
-recursive-include pyoracc/support_files *.txt
+include pyoracc/cdlimodel/support_files/*.txt
 include LICENSE.txt
 include README.md
